basic header on index.html done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>David Hawkins</title>
 </head>
 <body>
-    
+    <header>
+        <h1>David Hawkins</h1>
+        <a href="#">About</a> | <a href="#">Portfolio</a> | <a href="#">Contact</a>
+        <hr>
+    </header>
     
 </body>
 </html>
