--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,20 @@
     <title>Contact</title>
 </head>
 <body>
+    <!-- header -->
     <header>
         <h1>David Hawkins</h1>
         <a href="#">About</a> | <a href="#">Portfolio</a> | <a href="#">Contact</a>
         <hr>
     </header>
+    <!-- main content -->
+    <div>
+
+    </div>
+    <!-- footer -->
+    <footer>
+        Copyright &copy
+    </footer>
     
 </body>
 </html>
