--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,20 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <h1>David Hawkins</h1>
-        <a href="#">About</a> | <a href="#">Portfolio</a> | <a href="#">Contact</a>
-        <hr>
-    </header>
+        <!-- header -->
+        <header>
+            <h1>David Hawkins</h1>
+            <a href="#">About</a> | <a href="#">Portfolio</a> | <a href="#">Contact</a>
+            <hr>
+        </header>
+        <!-- main content -->
+        <div>
     
-</body>
+        </div>
+        <!-- footer -->
+        <footer>
+            Copyright &copy 
+        </footer>
+        
+    </body>
 </html>
