contact form html done

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,21 @@
     </header>
     <!-- main content -->
     <div>
+        <h1>Contact</h1>
+        <hr>
+        <form>
+            Name:<br>
+            <input type="text">
+            <br>
+            Email:<br>
+            <input type="text">
+            <br>
+            Message:<br>
+            <textarea>Comment</textarea>
+            <br>
+            <input type="submit">
+
+        </form>
 
     </div>
     <!-- footer -->
